0.9.3
 - enh: update hyperparameters of rating regressors
 - ref: deprecation in h5py: replace dataset.value by dataset[...]
0.9.2
 - ref: renamed the mode `model_hertz_parabolic` to
   `model_hertz_paraboloidal` to be consistent
 - docs: updat code reference and other minor improvements
0.9.1
 - fix: `preprocessing` keyword not working in `Indentation.fit_model`
 - docs: add another scripting example and minor improvements
 - tests: increase coverage
0.9.0
 - ref: remove legacy "discrete" feature type
 - ref: renamed kwargs for `Indetation.rate_quality`
 - ref: new method `nanite.load_group` for loading experimental data
 - ref: new class read.data.IndentationData for managing data
 - ref: replace dataset.IndentationDataSet with group.IndentationGroup
   to avoid ambiguities
 - fix: add missing "zef18" training set
 - fix: sample weight computation failed when a rating level was missing
 - enh: add `nanite-generate-training-set` command line program
 - tests: reduce warnings and increase coverage
 - cleanup: old docs in nanite.rate.io
 - docs: major update using helper extensions
0.8.0
 - initial release